# qrz-featured

./: .gitignore  LICENSE  README.md  pyproject.toml
src/qrz_featured/: __init__.py  cli.py  client.py  parse.py
tests/: conftest.py  test_cli.py  test_client.py  test_parse.py
tests/fixtures/: callsign.xml  homepage.html  session.xml
