[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qrz-featured"
version = "0.1.0"
description = "Unofficial tool to look up the current QRZ.com Featured Member"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jason Dinsmore" }]

[project.scripts]
qrz-featured = "qrz_featured.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
